# ndis_rag

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
agent_files/: 01.import_data.py  02.parse_files.py  03.llamaindex_rag.py  03.qanda_rag.py  04.rag_app.py  05.llamaindex_rag.py
archive/: 03.qanda_rag.py
data/processed/: combined_content_sml.txt
data/raw/: Baseline_Outcomes_dataCSV_67KB.csv  Baseline_Outcomes_data_rulesDOCX_88KB.docx  Culturally_and_linguistically_diverse_participantsCSV_26KB.csv  Culturally_and_linguistically_diverse_participants_data_rules_DOCX_88KB.docx  First_Nations_participantsCSV_41KB.csv  First_Nations_participants_data_rules_DOCX_88KB.docx  Longitudinal_Outcomes_dataCSV_1.1MB.csv  Longitudinal_Outcomes_data_rulesDOCX_94KB.docx  Participant_goals_data_rulesDOCX_85KB.docx  Participant_numbers_and_plan_budgets_data_rules_DOCX_95KB.docx  Participants_by_CED_dataCSV_48KB.csv  Participants_by_CED_data_rulesDOCX_85KB.docx  Participants_by_LGA_dataCSV_326KB.csv  Participants_by_LGA_data_rulesDOCX_86KB.docx  Participants_by_SA2_data_CSV_2.2MB.csv  Participants_by_SA2_data_rules_DOCX_85KB.docx  Participants_by_SA3_dataCSV_287KB.csv  Participants_by_SA3_data_rulesDOCX_85KB.docx  Participants_by_SA4_dataCSV_87KB.csv  Participants_by_SA4_data_rulesDOCX_85KB.docx  Participants_count_by_diagnosis_dataCSV_1.3MB.csv  Participants_count_by_diagnosis_data_rulesDOCX_95KB.docx  Plan_Management_types_data_rulesDOCX_95KB.docx  Projected_participant_by_service_district_dataCSV_10KB.csv  (+15 more)
docs/: mkdocs.yml
(+1 files in other folders)
