[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ndis_agent"
version = "0.0.1"
description = "This Agent will aim to answer questions on NDIS participants"
authors = [
  { name = "angelica chowdhury" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["ndis_agent"]
include = ["pyproject.toml", "ndis_agent/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ndis_agent"]
force-sort-within-sections = true

